<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doggy Detector</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_title">Experimental #</string>
    <string name="dialog_message">Please pick the experimental for #</string>
    
    <string-array name="experimentals">
        <item>Malignant Cancer Blood Plasma</item>
    </string-array>
    
    <string-array name="controls">
        <item>Empty Jar</item>
        <item>Normal Blood Plasma</item>
        <item>Benign Blood Plasma</item>
    </string-array>
    
    <string-array name="handlers">
        <item>Lorenzo</item>
        <item>Alex</item>
        <item>Morgan</item>
        <item>Avery</item>
    </string-array>
    
    <string-array name="dogs">
        <item>Tsunami</item>
        <item>Ohlin</item>
        <item>Ffoster</item>
        <item>McBaine</item>
    </string-array>
    
    <string-array name="results">
        <item>Miss</item>
        <item>False</item>
        <item>Success</item>
    </string-array>

    <string-array name="directions">
        <item>Clockwise</item>
        <item>Counterclockwise</item>
    </string-array>
        <string name="penn_working_dog_center">Penn Working Dog Center</string>
        <string name="doggy_detector">Doggy Detector</string>
        <string name="start_trial">Start Trial</string>
        <string name="view_history">View History</string>
        <string name="settings">Settings</string>
        <string name="default_configuration_">Default Configuration:</string>
        <string name="control">Control  :</string>
        <string name="benign">Benign  :</string>
        <string name="malignant">Malignant  :</string>
        <string name="default_tester">Default Tester:</string>
        <string name="send_data_to_">Send Data To:</string>
        <string name="dogs_">Dogs:</string>
        <string name="start_new_trial">Start New Trial</string>
        <string name="configuration_">Configuration:</string>
        <string name="dog_">Dog:</string>
        <string name="tester_">Tester:</string>
        <string name="begin">Begin</string>
        <string name="_from_default_control"># from default control</string>
        <string name="_from_default_benign"># from default benign</string>
        <string name="_from_default_malignant"># from default malignant</string>
        <string name="dog_from_default_setting">dog from default setting</string>
        <string name="tester_from_default_setting">tester from default setting</string>
    
</resources>
