<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:columnCount="2"
    android:orientation="horizontal"
    tools:context=".TrialActivityNew" >

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="1" />

    <Button
        android:id="@+id/NewTrialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_row="1"
        android:background="#D6D6D6"
        android:text="@string/start_new_trial"
        android:textColor="#000000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/Configuration"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="125dp"
        android:layout_row="1"
        android:text="@string/configuration_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/Control"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="200dp"
        android:layout_row="1"
        android:text="@string/control"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/Benign"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="275dp"
        android:layout_row="1"
        android:text="@string/benign"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/MalignantText"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="350dp"
        android:layout_row="1"
        android:text="@string/malignant"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/Dog"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:layout_row="1"
        android:text="@string/dog_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/Tester"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="375dp"
        android:layout_row="1"
        android:text="@string/tester_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="35sp" />

    <Button
        android:id="@+id/Begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_row="1"
        android:background="#D6D6D6"
        android:text="@string/begin"
        android:textColor="#000000"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/controlFromDefault"
        android:layout_width="311dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_row="1"
        android:ems="10"
        android:text="@string/_from_default_control"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="25sp" android:inputType="text"/>

    <EditText
        android:id="@+id/benignFromDefault"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="275dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/_from_default_benign"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="25sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/malignantFromDefault"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="350dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/_from_default_malignant"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/dogFromDefault"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/dog_from_default_setting"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/testerFromDefault"
        android:layout_width="377dp"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="375dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tester_from_default_setting"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="25sp" />

</GridLayout>