<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:columnCount="1"
    tools:context=".EditDefaultActivity" >

    <Button
        android:id="@+id/StartTrialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_row="0"
        android:background="#D6D6D6"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/DDText"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_row="0"
        android:text="@string/default_configuration_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/ControlText"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="125dp"
        android:layout_row="0"
        android:text="@string/control"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="19sp" />
    
        <TextView
            android:id="@+id/PWDCText"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="150dp"
            android:layout_row="0"
            android:text="@string/benign"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/Malignant"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="175dp"
            android:layout_row="0"
            android:text="@string/malignant"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/DefaultTesterText"
            android:layout_column="0"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_row="0"
            android:text="@string/default_tester"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/SendDataTo"
            android:layout_column="0"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:layout_row="0"
            android:text="@string/send_data_to_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/Dogs"
            android:layout_column="0"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:layout_row="0"
            android:text="@string/dogs_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

</GridLayout>